--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "github-buttons-babel-lib",
   "version": "0.0.1",
-  "description": "",
+  "description": "Github-buttons Unofficial Babel starter kit based module distribution library source code repository.",
   "license": "MIT",
   "keywords": [],
   "main": "index.js",
