--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
   "private": true,
-  "name": "babel-starter-kit",
-  "version": "0.0.0",
-  "description": "A project template for authoring and publishing JavaScript libraries",
-  "homepage": "https://www.kriasoft.com/babel-starter-kit/",
-  "repository": "kriasoft/babel-starter-kit",
-  "author": "Kriasoft <hello@kriasoft.com> (https://www.kriasoft.com)",
-  "contributors": [
-    "Konstantin Tarkus <hello@tarkus.me>",
-    "Vladimir Kutepov <frenzzy.man@gmail.com>"
-  ],
+  "name": "github-buttons-babel-lib",
+  "version": "0.0.1",
+  "description": "Github-buttons Unofficial Babel starter kit based module distribution library source code repository.",
   "license": "MIT",
   "keywords": [],
   "main": "index.js",
@@ -40,13 +33,13 @@
     "babel-register": "^6.16.3",
     "chai": "^4.0.0-canary.1",
     "coveralls": "^2.11.14",
-    "del": "^2.2.2",
-    "eslint": "^3.8.0",
-    "eslint-config-airbnb-base": "^10.0.1",
+    "del": "^3.0.0",
+    "eslint": "^4.2.0",
+    "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.2.0",
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^3.1.2",
-    "rollup": "^0.36.3",
+    "rollup": "^0.45.2",
     "rollup-plugin-babel": "^2.6.1",
     "sinon": "^2.0.0-pre.3"
   },
