--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.16.3",
+    "browserify": "^14.4.0",
     "chai": "^4.0.0-canary.1",
     "coveralls": "^2.11.14",
     "del": "^3.0.0",
