--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
       "stage-0"
     ],
     "plugins": [
-      "transform-runtime"
+      "transform-runtime",
+      ["transform-strict-mode", {
+        "strict": false
+      }]
     ]
   },
   "eslintConfig": {
@@ -30,6 +33,7 @@
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-plugin-transform-strict-mode": "^6.24.1",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.16.3",
