--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "github-buttons-babel-lib",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Github-buttons Unofficial Babel starter kit based module distribution library source code repository.",
   "license": "MIT",
   "keywords": [],
@@ -13,7 +13,10 @@
       "stage-0"
     ],
     "plugins": [
-      "transform-runtime"
+      "transform-runtime",
+      ["transform-strict-mode", {
+        "strict": false
+      }]
     ]
   },
   "eslintConfig": {
@@ -21,16 +24,20 @@
     "extends": "airbnb-base"
   },
   "dependencies": {
-    "babel-runtime": "^6.11.6"
+    "babel-runtime": "^6.11.6",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-plugin-transform-strict-mode": "^6.24.1",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.16.3",
+    "browserify": "^14.4.0",
     "chai": "^4.0.0-canary.1",
     "coveralls": "^2.11.14",
     "del": "^3.0.0",
