--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "keywords": [],
   "main": "index.js",
   "jsnext:main": "index.es.js",
-  "repository": {"type":"git","url":"https://github.com/micrub/github-buttons-babel-lib"},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/micrub/github-buttons-babel-lib"
+  },
   "babel": {
     "presets": [
       "latest",
@@ -15,9 +18,12 @@
     ],
     "plugins": [
       "transform-runtime",
-      ["transform-strict-mode", {
-        "strict": false
-      }]
+      [
+        "transform-strict-mode",
+        {
+          "strict": false
+        }
+      ]
     ]
   },
   "eslintConfig": {
