--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "sinon": "^2.0.0-pre.3"
   },
   "scripts": {
-    "lint": "eslint src test tools",
+    "lint": "eslint src test",
     "test": "mocha --compilers js:babel-register",
     "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
     "test:cover": "babel-node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha",
