--- a/package.json
+++ b/package.json
@@ -48,9 +48,12 @@
     "chai": "^4.0.0-canary.1",
     "coveralls": "^2.11.14",
     "del": "^3.0.0",
-    "eslint": "^4.2.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.2",
     "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^3.1.2",
     "rollup": "^0.45.2",
