--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,11 @@
 {
-    "extends": "airbnb",
     "parser": "babel-eslint",
+    "extends": "standard",
     "env": {
-      "browser": true
-    }
+      "browser": true,
+      "node": true
+    },
+    "plugins" : [
+      "react"
+    ]
 }
