--- a/package.json
+++ b/package.json
@@ -42,6 +42,12 @@
     "browserify": "^14.4.0",
     "chai": "^4.0.0-canary.1",
     "del": "^3.0.0",
+    "eslint": "^4.3.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "mocha": "^3.1.2",
     "rollup": "^0.45.2",
     "rollup-plugin-babel": "^2.6.1"
