--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-plugin-transform-strict-mode": "^6.24.1",
     "babel-preset-latest": "^6.16.0",
